# DashGusBr-lib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: demo.py
src/dashgusbr/: __init__.py  _cores_times.py  _theme.py  analytics.py  client.py  config.py  data.py  export.py  schema.py  viz.py
tests/: conftest.py  test_analytics.py  test_client.py  test_client_novos.py  test_cores_times.py  test_data.py  test_export_e_cache.py  test_novas_analises.py  test_personalizacao_viz.py  test_schema.py  test_viz.py
