[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashgusbr"
dynamic = ["version"]
description = "Camada de consumo e visualização (Plotly) do histórico de partidas do Campeonato Brasileiro, sobre a OBT do projeto Infra-Brasileirao."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Gustavo Gasperetti", email = "gustavolgasperetti@gmail.com" },
]
keywords = ["brasileirao", "futebol", "dados", "plotly", "pandas", "dataviz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0",
    "plotly>=5.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
imagem = [
    "kaleido>=0.2",
]

[project.urls]
Homepage = "https://github.com/gustavogasperetti/DashGusBr-lib"
Repository = "https://github.com/gustavogasperetti/DashGusBr-lib"
Issues = "https://github.com/gustavogasperetti/DashGusBr-lib/issues"
"Fonte de dados (ETL)" = "https://github.com/gustavogasperetti/Infra-Brasileirao"

[tool.hatch.version]
path = "src/dashgusbr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dashgusbr"]

[tool.ruff]
line-length = 92
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# O CSV de fixture é dado embutido: as linhas não devem ser quebradas
"tests/conftest.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "rede: testes que acessam a internet (desmarcados por padrão: -m 'not rede')",
]
addopts = "-m 'not rede'"
